--- a/config.json
+++ b/config.json
@@ -446,6 +446,10 @@
             {
               "value": "nl",
               "name": "Dutch"
+            },
+            {
+              "value": "ro",
+              "name": "Romanian"
             }
           ]
         },
